syntax = "proto3";
package cosmatics;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/refractedlabs/cosmatics/types";


message SyncState {
  int64 block_height = 1;
  google.protobuf.Timestamp block_time = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message QuerySyncStateRequest {
}

message QuerySyncStateResponse {
  SyncState sync_state = 1 [(gogoproto.nullable) = false];
}